public/lite/api/en/r1.7/_sources/generate/file_include_core_ops_resize.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_core_ops_resize.h:

File resize.h
=============

|exhale_lsh| :ref:`Parent directory <dir_include_core_ops>` (``include/core/ops``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/core/ops/resize.h``)
------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_core_ops_resize.h.rst





Includes
--------


- ``memory``

- ``mindapi/base/format.h``

- ``mindapi/base/types.h``

- ``ops/base_operator.h`` (:ref:`file_include_core_ops_base_operator.h`)

- ``vector``






Namespaces
----------


- :ref:`namespace_mindspore`

- :ref:`namespace_mindspore__ops`


Classes
-------


- :ref:`exhale_class_classmindspore_ops_Resize`


Functions
---------


- :ref:`exhale_function_mindspore_ops_ResizeInfer-1`


Variables
---------


- :ref:`exhale_variable_mindspore_ops_kNameResize-1`

